--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Comfortaa');
 @import url('https://fonts.googleapis.com/css?family=Alata');
+@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap');
 
 body {
   margin: 0;
